# curso-django-bookstore-github

./: INSTRUCOES_DJANGO.txt
bookstore/: Dockerfile  docker-compose.yml  env.dev  pyproject.toml
bookstore/bookstore/: settings.py  urls.py
bookstore/order/: admin.py  urls.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/test_viewsets/: test_order_viewset.py
bookstore/order/viewsets/: order_viewset.py
bookstore/product/: admin.py  urls.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: category.py  product.py
bookstore/product/serializers/: product_serializer.py
bookstore/product/tests/test_viewsets/: test_product_viewset.py
bookstore/product/viewsets/: product_viewset.py
postman/: PYTHON.postman_collection.json
